# ppmp_exercises

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: Findfmt.cmake  google_benchmark.cmake
kernels/: CMakeLists.txt  core.cu  core.cuh  device_query.cu  device_query.cuh  elementwise.cu  elementwise.cuh  internal.cu  internal.cuh  matmul.cu  matmul.cuh
